Admin updates, tutorial updates, fixing flicker

--- a/app/css/base.css
+++ b/app/css/base.css
@@ -197,14 +197,14 @@ to { -o-transform: rotate(360deg); }
 }
 
 .transition {
-	-webkit-backface-visibility: hidden;
+	/* -webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 
 	transition: 0.3s all ease-out;
 	-webkit-transition: 0.3s all ease-out;
 	-moz-transition: 0.3s all ease-out;
 	-ms-transition: 0.3s all ease-out;
-	-o-transition: 0.3s all ease-out;
+	-o-transition: 0.3s all ease-out; */
 }
 
 .scale {
